- Patch to address navbar overflowing on mobile device - Patch to fix search bar on MoogleShop

--- a/WayfinderProject/Pages/MoogleShop.razor.css
+++ b/WayfinderProject/Pages/MoogleShop.razor.css
@@ -46,7 +46,7 @@
 .wayfinder-search-alt {
     text-align: right;
     margin-top: 20px;
-    width: 150%;
+    width: 100%;
 }
 
 .wayfinder-search-icon {
